All_Component_DX/force-app/main/default/objects/SPM_Schedul_Tech_Utilization_Constraints__c/fields/Horizon_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Horizon_Start_Date__c</fullName>
    <description>Events creation Start Date</description>
    <inlineHelpText>Events creation Start Date</inlineHelpText>
    <label>Horizon Start Date</label>
    <type>Date</type>
</CustomField>