All_Component_DX/force-app/main/default/objects/SPM_Schedul_Tech_Utilization_Constraints__c/fields/JobId__c.field-meta.xml
<CustomField>
    <fullName>JobId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Servicemax Jobs</description>
    <inlineHelpText>Lookup to Servicemax Jobs</inlineHelpText>
    <label>JobId</label>
    <referenceTo>SVMX_Jobs__c</referenceTo>
    <relationshipLabel>SPM Schedul Tech Utilization Constraints</relationshipLabel>
    <relationshipName>SPM_Schedul_Tech_Utilization_Constraints</relationshipName>
    <type>Lookup</type>
</CustomField>