All_Component_DX/force-app/main/default/objects/SPM_Schedul_Tech_Utilization_Constraints__c/fields/Overall_Drive_Time__c.field-meta.xml
<CustomField>
    <fullName>Overall_Drive_Time__c</fullName>
    <description>Weight of technician&apos;s overall drive time</description>
    <inlineHelpText>Weight of technician&apos;s overall drive time</inlineHelpText>
    <label>Overall Drive Time</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>