All_Component_DX/force-app/main/default/objects/SPM_Schedul_Tech_Utilization_Constraints__c/fields/Overhead_time__c.field-meta.xml
<CustomField>
    <fullName>Overhead_time__c</fullName>
    <description>Weight of technician&apos;s overhead time.</description>
    <inlineHelpText>Weight of technician&apos;s overhead time.</inlineHelpText>
    <label>Overhead time</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>