All_Component_DX/force-app/main/default/objects/SPM_Schedul_Tech_Utilization_Constraints__c/fields/Preferred_Technician__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Technician__c</fullName>
    <description>Weight of selecting the preferred technician</description>
    <inlineHelpText>Weight of selecting the preferred technician</inlineHelpText>
    <label>Preferred Technician</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>