All_Component_DX/force-app/main/default/objects/SPM_Schedul_Tech_Utilization_Constraints__c/fields/Priority2__c.field-meta.xml
<CustomField>
    <fullName>Priority2__c</fullName>
    <description>Second Priority of the Work Order</description>
    <inlineHelpText>Second Priority of the Work Order</inlineHelpText>
    <label>Priority2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>