All_Component_DX/force-app/main/default/objects/SPM_Schedul_Tech_Utilization_Constraints__c/fields/Priority3__c.field-meta.xml
<CustomField>
    <fullName>Priority3__c</fullName>
    <description>Third Priority of the Work Order</description>
    <inlineHelpText>Third Priority of the Work Order</inlineHelpText>
    <label>Priority3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>