All_Component_DX/force-app/main/default/objects/SPM_Schedul_Tech_Utilization_Constraints__c/fields/Product_Specialization__c.field-meta.xml
<CustomField>
    <fullName>Product_Specialization__c</fullName>
    <description>Weight of technician meeting required product specialization</description>
    <inlineHelpText>Weight of technician meeting required product specialization</inlineHelpText>
    <label>Product Specialization</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>