All_Component_DX/force-app/main/default/objects/SPM_Schedul_Tech_Utilization_Constraints__c/fields/Qualified_Technician__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Technician__c</fullName>
    <description>Weight of finding the Qualified Technician for the service.</description>
    <inlineHelpText>Weight of finding the Qualified Technician for the service.</inlineHelpText>
    <label>Qualified Technician</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>