All_Component_DX/force-app/main/default/objects/SPM_Schedul_Tech_Utilization_Constraints__c/fields/Skill_Match__c.field-meta.xml
<CustomField>
    <fullName>Skill_Match__c</fullName>
    <description>Weight of matching skill set of the technician with the desired skill set</description>
    <inlineHelpText>Weight of matching skill set of the technician with the desired skill set</inlineHelpText>
    <label>Skill Match</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>