All_Component_DX/force-app/main/default/objects/SPM_Schedul_Tech_Utilization_Constraints__c/fields/SLA__c.field-meta.xml
<CustomField>
    <fullName>SLA__c</fullName>
    <description>Weight of meeting the SLA Time Window</description>
    <inlineHelpText>Weight of meeting the SLA Time Window</inlineHelpText>
    <label>SLA (Weights)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>