All_Component_DX/force-app/main/default/objects/SPM_Schedul_Tech_Utilization_Constraints__c/fields/Submitted_Work_Orders_Count__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Work_Orders_Count__c</fullName>
    <description>Number of work orders that were sent for scheduling run</description>
    <inlineHelpText>Number of work orders that were sent for scheduling run</inlineHelpText>
    <label>Submitted Work Orders Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>