All_Component_DX/force-app/main/default/objects/SPM_Schedul_Tech_Utilization_Constraints__c/fields/Technician_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Technician_Eligibility__c</fullName>
    <description>Weight of technician&apos;s eligibility to do the job.</description>
    <inlineHelpText>Weight of technician&apos;s eligibility to do the job.</inlineHelpText>
    <label>Technician Eligibility</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>