All_Component_DX/force-app/main/default/objects/SPM_Schedul_Tech_Utilization_Constraints__c/fields/Technicians_Count__c.field-meta.xml
<CustomField>
    <fullName>Technicians_Count__c</fullName>
    <description>Number of Technicians</description>
    <inlineHelpText>Number of Technicians</inlineHelpText>
    <label>Technicians Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>