All_Component_DX/force-app/main/default/objects/SPM_Schedul_Tech_Utilization_Constraints__c/fields/Total_Events_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Events_Count__c</fullName>
    <description>Number of total events generated</description>
    <inlineHelpText>Number of total events generated</inlineHelpText>
    <label>Total Events Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>