All_Component_DX/force-app/main/default/objects/SPM_Schedul_Tech_Utilization_Constraints__c/fields/Travel_Cost__c.field-meta.xml
<CustomField>
    <fullName>Travel_Cost__c</fullName>
    <description>Weight of total travel cost incurred by the technician.</description>
    <inlineHelpText>Weight of total travel cost incurred by the technician.</inlineHelpText>
    <label>Travel Cost</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>