All_Component_DX/force-app/main/default/objects/SPM_Schedul_Tech_Utilization_Constraints__c/fields/Utilization__c.field-meta.xml
<CustomField>
    <fullName>Utilization__c</fullName>
    <description>Average utilization for the Run</description>
    <formula>( Utilization_Sum__c / Utilization_Count__c ) / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average utilization for the Run</inlineHelpText>
    <label>Utilization %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>