All_Component_DX/force-app/main/default/objects/SPM_Schedul_Tech_Utilization_Constraints__c/fields/Utilization_Sum__c.field-meta.xml
<CustomField>
    <fullName>Utilization_Sum__c</fullName>
    <description>Sum of averages computed for every run</description>
    <inlineHelpText>Sum of averages computed for every run</inlineHelpText>
    <label>Utilization Sum</label>
    <summarizedField>SPM_Scheduling_Technician_Utilization__c.Utilization__c</summarizedField>
    <summaryForeignKey>SPM_Scheduling_Technician_Utilization__c.SPM_Schedul_Tech_Utilization_Constraints__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>